@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.3-0
-Date: 2020-02-22
+Date: 2020-02-25
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
